# mujoco-template

./: LQR.txt  README.md  VERDICT.md  mujoco-template.py  mujoco.pyi  mujoco_template.py  pyproject.toml  pyrightconfig.json
examples/: __init__.py  pendulum.xml  run_pendulum.py  run_pendulum_passive.py
examples/cartpole/: __init__.py  cartpole.py  cartpole.xml  cartpole_common.py  cartpole_config.py  main.py  run_pid.py
examples/cartpole/controllers/: __init__.py  pid.py
examples/cartpole/scenarios/: __init__.py  balance.py
examples/drone/: __init__.py  drone_common.py  drone_config.py  drone_lqr.py  main.py  run_lqr.py  x2.xml
examples/drone/controllers/: __init__.py  lqr.py
examples/drone/scenarios/: __init__.py  point_to_point.py
examples/drone2/: main.py
examples/humanoid/: __init__.py  humanoid_common.py  humanoid_config.py  humanoid_lqr.py  run_lqr.py
examples/humanoid/controllers/: __init__.py  lqr.py
examples/humanoid/scenarios/: __init__.py  balance.py
examples/pendulum/: __init__.py  pendulum.py  pendulum.xml  pendulum_common.py  pendulum_config.py  pendulum_passive.py  pendulum_passive_config.py  run_passive.py  run_pd.py
examples/pendulum/controllers/: __init__.py  pd.py
mujoco_template/: __init__.py  __main__.py  _typing.py  adaptive_camera.py  compat.py  control.py  controllers.py  env.py  exceptions.py  jacobians.py  linearization.py  logging.py  model.py  mujoco_template.py  observations.py  rollout.py  runtime.py  session.py  setpoints.py  state_utils.py  video.py
tests/: test_mujoco_template.py
(+3 files in other folders)
