[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-template"
version = "0.1.0"
description = "Reusable utilities for building MuJoCo controllers and environments."
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.1",
    "numpy>=1.23",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools]
packages = ["mujoco_template"]
include-package-data = true

[tool.setuptools.package-data]
"mujoco_template" = ["mujoco.pyi"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "mujoco"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

